--- a/app/components/Card.module.css
+++ b/app/components/Card.module.css
@@ -1,10 +1,20 @@
+
+.typing_screen{
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    color: grey;
+    background-color: grey;
+}
 .card_text{
     white-space: pre-wrap;
+    margin:auto;
     /* font-family: monospace; */
     padding: 24px;
     /* color: blue; */
     font-size: large;
     font-weight: bold;
+    color: grey
 }
 .finish_display_stats_card{
     /* align-items: center;
@@ -17,7 +27,10 @@
     background-color: lightblue;
     font-size: xx-large;
     font-weight: bolder;
+    color: grey
 }
 .retry_button{
-    background-color: blue;
+    background-color: lightpink;
+    color: grey;
+    margin:5px
 }
