--- a/app/components/Card.module.css
+++ b/app/components/Card.module.css
@@ -20,7 +20,7 @@
     /* align-items: center;
     justify-content: center; */
     margin:auto;
-    width: 50%;
+    width: 80%;
     height: 100%;
     text-align: center;
     padding:24px;
@@ -33,4 +33,15 @@
     background-color: lightpink;
     color: grey;
     margin:5px
+}
+.all_time_stats_card{
+    margin:auto;
+    width: 100%;
+    height: 100%;
+    padding:24px;
+    /* background-color: lightblue; */
+    background-color: lightgray;
+    font-size: xx-large;
+    font-weight: bolder;
+    color: darkred
 }
