added page routing and refactored CRUD calls

--- a/app/components/Card/Card.module.css
+++ b/app/components/Card/Card.module.css
@@ -24,7 +24,7 @@
     height: 100%;
     text-align: center;
     padding:24px;
-    background-color: lightblue;
+    background-color: lightgray;
     font-size: xx-large;
     font-weight: bolder;
     color: grey
